--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 </head>
 <body>
     <H1>Hello World!</H1>
-    <script>
-        // This is my first JavaScript code
-        console.log('Hello World!');
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
